tests/cases/compiler-development/artifact/errors/diagnostic-core-use-before-declaration.diagnostic
diagnostic error code=T0001 family=type message="unknown name 'later'" sources=1 labels=1 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/compiler-development/artifact/errors/diagnostic-core-use-before-declaration.ari" display="tests/cases/compiler-development/artifact/errors/diagnostic-core-use-before-declaration.ari" bytes=79
  Label index=0 role=primary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-core-use-before-declaration.ari" line=2 column=15 end_line=2 end_column=20 byte_start=33 byte_end=38 message=""
  Snippet label=0 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-core-use-before-declaration.ari:2:15\n   |\n 2 |   let value = later + 1;\n   |               ^^^^^"
  Note index=0 location=none message="Ari resolves local bindings, parameters, functions, enum cases, constants, and imported items before expression lowering"
  Help index=0 location=none message="declare 'later' before this use, import it with use, or qualify it with its module path"
